// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The licence details page .getData returns age concession as Junior 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "age_junior_concession",
      "disabled": undefined,
      "end": undefined,
      "index": 0,
      "length": "licence_type_12m",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": undefined,
      "type": undefined,
    },
  ],
}
`;

exports[`The licence details page .getData returns age concession as Neither 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "",
      "disabled": undefined,
      "end": undefined,
      "index": 0,
      "length": "licence_type_12m",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": undefined,
      "type": undefined,
    },
  ],
}
`;

exports[`The licence details page .getData returns age concession as Senior 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "age_senior_concession",
      "disabled": undefined,
      "end": undefined,
      "index": 0,
      "length": "licence_type_12m",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": undefined,
      "type": undefined,
    },
  ],
}
`;

exports[`The licence details page .getData returns licence length as Salmon and sea trout, 1 day 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "",
      "disabled": undefined,
      "end": undefined,
      "index": 0,
      "length": "licence_type_1d",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": undefined,
      "type": undefined,
    },
  ],
}
`;

exports[`The licence details page .getData returns licence length as Salmon and sea trout, 8 days 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "",
      "disabled": undefined,
      "end": undefined,
      "index": 0,
      "length": "licence_type_8d",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": undefined,
      "type": undefined,
    },
  ],
}
`;

exports[`The licence details page .getData returns licence length as Salmon and sea trout, 12 months 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "",
      "disabled": undefined,
      "end": undefined,
      "index": 0,
      "length": "licence_type_12m",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": undefined,
      "type": undefined,
    },
  ],
}
`;

exports[`The licence details page .getData returns the expected data 1`] = `
Object {
  "licences": Array [
    Object {
      "ageConcession": "age_senior_concession",
      "disabled": true,
      "end": "1:00am on 5 June 2021",
      "index": 0,
      "length": "licence_type_12m",
      "licenceHolder": "Turanga Leela",
      "obfuscatedDob": "obfuscatedDob",
      "price": 12,
      "referenceNumber": "123456789",
      "start": "1:00am on 6 June 2020",
      "type": "Shopping trollies and old wellies",
    },
  ],
}
`;
